--- a/src/Pages/Booking/style.css
+++ b/src/Pages/Booking/style.css
@@ -1,10 +1,7 @@
 .booking {
   display: flex;
-}
-.container-form {
-  padding: 40px;
-}
-.container-map {
-  padding: 40px;
-  background-color: antiquewhite;
+  align-items: center;
+  justify-content: center;
+
+  height: 86vh;
 }
